# minesweeper

./: Cargo.toml  README.md
assets/: icon.icns
src/: consts.rs  game.rs  main.rs  rects.rs  sprites.rs  textures.rs
